--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
-
-        <!-- Définition de l'activité principale -->
+        <activity
+            android:name=".CountryDetailsActivity"
+            android:parentActivityName=".MainActivity">
+        </activity>
         <activity
             android:name=".HomeActivity"
             android:exported="true"
